# scion-sdk

./: .markdownlint.json  Cargo.toml  README.md  clippy.toml  dev-env.nix  flake.nix  license_header.sh  rust-toolchain.toml  rustfmt.toml
endhost-api/endhost-api/: Cargo.toml  README.md
endhost-api/endhost-api-client/: Cargo.toml  README.md
endhost-api/endhost-api-client/src/: client.rs  lib.rs
endhost-api/endhost-api-models/: Cargo.toml  README.md
endhost-api/endhost-api-models/src/: lib.rs  underlays.rs
endhost-api/endhost-api-protobuf/: Cargo.toml  README.md  build.rs
endhost-api/endhost-api-protobuf/protobuf/endhost/v1/: path.proto  underlays.proto
endhost-api/endhost-api-protobuf/src/: convert.rs  lib.rs
endhost-api/endhost-api-protobuf/src/proto/: endhost.api_service.v1.rs
endhost-api/endhost-api/src/: lib.rs  routes.rs
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/tests/: pocketscion_router_mode.rs  pocketscion_session_renewal.rs  pocketscion_snap_mode.rs  scionstack_basic_functionality.rs  scionstack_error_handling.rs
libs/address-manager/: Cargo.toml  README.md
libs/address-manager/src/: allocator.rs  dto.rs  lib.rs  manager.rs
libs/address-manager/src/allocator/: addr_set.rs  dto.rs
libs/address-manager/src/manager/: dto.rs
libs/axum-connect-rpc/: Cargo.toml  README.md
libs/axum-connect-rpc/src/: error.rs  extractor.rs  lib.rs
libs/common-types/: Cargo.toml  README.md
libs/common-types/src/: ed25519.rs  lib.rs
libs/common-types/src/testdata/: ed25519_signing.pem  ed25519_verifying.pem  rsa_private.pem  rsa_public.pem
libs/observability/: Cargo.toml  README.md
libs/observability/src/: lib.rs  metrics.rs  prometheus_json.rs
libs/observability/src/metrics/: endpoint.rs  registry.rs
libs/reqwest-connect-rpc/: Cargo.toml  README.md
libs/reqwest-connect-rpc/src/: client.rs  error.rs  lib.rs  token_source.rs
libs/reqwest-connect-rpc/src/token_source/: refresh.rs  static_token.rs
libs/token-validator/: Cargo.toml  README.md
libs/token-validator/src/: lib.rs  validator.rs
libs/trc/: Cargo.toml  README.md
libs/trc/src/: lib.rs  trc.rs
libs/trc/src/testdata/: ISD64-B1-S11.trc  ISD65-B1-S10.trc
libs/utils/: Cargo.toml
libs/utils/src/: io.rs  lib.rs  task_handler.rs  test.rs
pocketscion/: Cargo.toml  README.md
pocketscion/examples/: server_client.rs
pocketscion/src/: api.rs  authorization_server.rs  cli.rs  dto.rs  endhost_api.rs  io_config.rs  lib.rs  management_api.rs  network.rs  runtime.rs  state.rs
pocketscion/src/api/: admin.rs
pocketscion/src/api/admin/: api.rs  client.rs  spec.gen.yml
pocketscion/src/authorization_server/: api.rs  client.rs  fake_idp.rs  token_exchanger.rs
pocketscion/src/network/: local.rs  scion.rs  simulator.rs
pocketscion/src/network/local/: receiver_registry.rs  receivers.rs  simulator.rs
pocketscion/src/network/local/receivers/: router_socket.rs  tunnel_gateway.rs
pocketscion/src/network/scion/: crypto.rs  routing.rs  segment.rs  simulator.rs  topology.rs  util.rs
pocketscion/src/network/scion/routing/: spec.rs
pocketscion/src/network/scion/segment/: lister.rs  model.rs  registry.rs  visitors.rs
pocketscion/src/network/scion/topology/: dto.rs  visitor.rs
pocketscion/src/state/: address_allocator.rs  endhost_segment_lister.rs  simulation_dispatcher.rs
pocketscion/tests/: endhost-api.rs  runtime.rs  scmp.rs  topology.rs
scion-proto/scion-proto/: Cargo.toml  README.md
scion-proto/scion-proto/benches/: checksum.rs
scion-proto/scion-proto/src/: address.rs  datagram.rs  lib.rs  packet.rs  path.rs  reliable.rs  scmp.rs  test_utils.rs  utils.rs  wire_encoding.rs
scion-proto/scion-proto/src/address/: asn.rs  endhost_address.rs  error.rs  host.rs  ia.rs  isd.rs  scion_address.rs  service.rs  socket_address.rs
scion-proto/scion-proto/src/packet/: checksum.rs  dispatch.rs  error.rs  headers.rs  layout.rs  raw.rs  scmp.rs  udp.rs
scion-proto/scion-proto/src/path/: combinator.rs  data_plane.rs  epic.rs  error.rs  fingerprint.rs  meta_header.rs  metadata.rs  segment.rs  standard.rs
scion-proto/scion-proto/src/reliable/: common_header.rs  parser.rs  registration.rs  wire_utils.rs
scion-proto/scion-proto/src/scmp/: error.rs  messages.rs  raw.rs
scion-proto/scion-proto/src/test/: graph.rs  mod.rs  topo.rs
scion-proto/scion-protobuf/: Cargo.toml  README.md  build.rs
scion-proto/scion-protobuf/src/: lib.rs
scion-proto/scion-protobuf/src/proto/: proto.control_plane.experimental.v1.rs  proto.control_plane.v1.rs  proto.crypto.v1.rs  proto.daemon.v1.rs  proto.drkey.v1.rs
scion-stack/: Cargo.toml
scion-stack/src/: allocation.rs  lib.rs  quic.rs  scionstack.rs  snap_tunnel.rs  types.rs  underlays.rs
scion-stack/src/path/: manager.rs  mod.rs  policy.rs
scion-stack/src/scionstack/: builder.rs  quic.rs  scmp_handler.rs  socket.rs  udp_polling.rs
scion-stack/src/underlays/: snap.rs  udp.rs
scion-stack/src/underlays/snap/: demultiplexer.rs  socket.rs
scion-stack/src/underlays/udp/: demultiplexer.rs  socket.rs  underlay_resolver.rs
snap/snap-control/: Cargo.toml  README.md  build.rs
snap/snap-control/protobuf/: anapaya.snap.v1.api_service.proto  snap.proto
snap/snap-control/src/: client.rs  crpc_api.rs  lib.rs  model.rs  protobuf.rs  server.rs
snap/snap-control/src/crpc_api/: api_service.rs
snap/snap-control/src/server/: README.md  auth.rs  metrics.rs  mock_segment_lister.rs  state.rs
snap/snap-dataplane/: Cargo.toml  README.md
snap/snap-dataplane/src/: dispatcher.rs  dto.rs  lib.rs  session.rs  state.rs  tunnel_gateway.rs
snap/snap-dataplane/src/session/: manager.rs  state.rs
snap/snap-dataplane/src/tunnel_gateway/: dispatcher.rs  gateway.rs  metrics.rs  packet_policy.rs  state.rs
snap/snap-tokens/: Cargo.toml  README.md
snap/snap-tokens/src/: lib.rs  session_token.rs  snap_token.rs
snap/snap-tun/: Cargo.toml  README.md
snap/snap-tun/src/: client.rs  lib.rs  metrics.rs  requests.rs  server.rs
snap/snap-tun/tests/: all.rs
tools/proto-gen/: Cargo.toml
tools/proto-gen/src/: main.rs
(+40 files in other folders)
