[workspace]
resolver = "2"

members = [
    "endhost-api/*",
    "integration-tests",
    "libs/*",
    "pocketscion",
    "scion-proto/*",
    "scion-stack",
    "snap/*",
]

[workspace.package]
edition = "2024"

[workspace.dependencies]
# Local Crates
endhost-api-client = { path = "endhost-api/endhost-api-client" }
endhost-api = { path = "endhost-api/endhost-api" }
endhost-api-models = { path = "endhost-api/endhost-api-models" }
endhost-api-protobuf = { path = "endhost-api/endhost-api-protobuf" }

address-manager = { path = "libs/address-manager"}
axum-connect-rpc = { path = "libs/axum-connect-rpc" }
common-types = { path = "libs/common-types" }
io-util = { path = "libs/io-util" }
observability = { path = "libs/observability" }
rangeset = { path = "libs/rangeset" }
reqwest-connect-rpc = { path = "libs/reqwest-connect-rpc" }
task-handler = { path = "libs/task-handler" }
test-util = { path = "libs/test-util" }
token-validator = { path = "libs/token-validator" }

pocketscion = { path = "pocketscion" }

scion-proto = { path = "scion-proto/scion-proto" }
scion-protobuf = { path = "scion-proto/scion-protobuf" }

snap-control = { path = "snap/snap-control" }
snap-dataplane = { path = "snap/snap-dataplane" }
snap-tun = { path = "snap/snap-tun" }
snap-tokens = { path = "snap/snap-tokens" }

scion-stack = { path = "scion-stack" }

# General Dependencies
aes = "0.8.4"
anyhow = { version = "1" }
arc-swap = "1.7.1"
assert_matches = "1.5.0"
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["http2"] }
axum-macros = "0.5"
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
clap = "4.5.38"
cmac = "0.7.2"
cms = "0.2.3"
criterion = "0.5.1"
derive_more = { version = "2.0.1", features = ["display", "deref"] }
der = { version = "0.7.10", features = ["pem", "derive"] }
ed25519-dalek = { version = "2.1.1", features = ["pkcs8", "pem"] }
foldhash = "0.1.5"
futures = "0.3.31"
hex = "0.4.3"
http = "1.3.1"
httparse = "1.10.1"
ipnet = "2.11.0"
jsonwebtoken = "9.3.1"
mockall = "0.13.1"
num-traits = "0.2.19"
ntest = "0.9.3"
pem = "3.0.5"
pin-project-lite = "0.2"
prometheus = { version = "0.14.0", features = ["process"] }
prost = "0.13"
prost-build = "0.13.5"
prost-types = "0.13.5"
quinn = "0.11.8"
rand = "0.9.1"
rand_chacha = { version = "0.9.0", features = ["serde"] }
rand_xorshift = "0.4.0"
rcgen = "0.13.2"
reqwest = { version = "0.12.15", features = [
    "charset",
    "http2",
    "json",
    "rustls-tls",
    "rustls-tls-native-roots",
], default-features = false }
rustls = { version = "0.23.27", features = [
    "ring",
    "std",
    "brotli",
], default-features = false }
scc = "3.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.14.0"
serde_yaml_ng = "0.10"
sha2 = "0.10.9"
test-log = { version = "0.2.17", features = ["trace"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tokio-util = "0.7.15"
tonic = "0.12"
tonic-build = "0.12"
tower = { version = "0.5.2", features = ["limit", "load-shed", "timeout"] }
tower-http = { version = "0.6.4", features = ["trace"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-bunyan-formatter = "0.3.10"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json", "time"] }
url = { version = "2.5.4", features = ["serde"] }
utoipa = { version = "5.3.1", features = ["chrono", "url", "uuid"] }
utoipa-axum = "0.2.0"
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
uuid = "1.16.0"
x509-cert = "0.2.5"


[workspace.lints.clippy]
mem_forget = "deny"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.metadata.cargo-shear]
ignored = ["foldhash", "scion-proto", "edge-tun"]

[profile.ci]
inherits = "dev"            # https://doc.rust-lang.org/cargo/reference/profiles.html#dev
incremental = false         # Disable incremental compilation to allow caching dependencies
