[package]
name = "pocketscion"
version = "0.1.0"
edition.workspace = true

[dependencies]
# Local Dependencies
address-manager = { workspace = true }
io-util = { workspace = true }
token-validator = { workspace = true }

scion-stack = { workspace = true }
scion-proto = { workspace = true }

snap-control = { workspace = true }
snap-dataplane = { workspace = true }
snap-tun = { workspace = true }
snap-tokens = { workspace = true }

endhost-api = { workspace = true }
endhost-api-models = { workspace = true }

# General Dependencies
async-trait = { workspace = true }
aes = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
derive_more = { workspace = true }
cmac = { workspace = true }
observability = { workspace = true }
task-handler = { workspace = true }
ed25519-dalek = { workspace = true }
http = { workspace = true }
ipnet = { workspace = true, features = ["serde"] }
ntest = { workspace = true }
pem = { workspace = true, features = ["serde"] }
quinn = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
reqwest = { workspace = true, features = ["json", "blocking"] }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true, features = ["base64"] }
serde_json = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
test-util = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
tower = { workspace = true, features = ["limit", "buffer"] }
tracing = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true, features = ["yaml", "time"] }
utoipa-axum = { workspace = true }
utoipa-redoc = { workspace = true, features = ["axum"] }

[dev-dependencies]
endhost-api-client = { workspace = true }

[lints]
workspace = true
