[package]
name = "scion-stack"
version = "0.2.0"
edition.workspace = true
authors = ["Anapaya & contributors"]
license = "Apache-2.0"
description = "SCION endhost network stack"
readme = "README.md"
repository = "https://github.com/anapaya/scion-sdk"
keywords = ["SCION", "networking"]
categories = ["network-programming"]

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true, features = ["deref"] }
endhost-api-client = { workspace = true }
endhost-api-models = { workspace = true }
foldhash = { workspace = true }
futures = { workspace = true }
pin-project-lite = { workspace = true }
prost = { workspace = true }
quinn = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rustls = { workspace = true, features = ["ring"] }
scc = { workspace = true }
scion-proto = { workspace = true }
scion-sdk-reqwest-connect-rpc = { workspace = true }
scion-sdk-utils = { workspace = true }
snap-control = { workspace = true }
snap-tun = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }

[lints]
workspace = true

# If you believe cargo-machete has detected an unused dependency incorrectly,
# you can add the dependency to the list of dependencies to ignore in the
# `[package.metadata.cargo-machete]` section of the appropriate Cargo.toml.
[package.metadata.cargo-shear]
ignored = ["prost"]
