[package]
name = "endhost-api-client"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest-connect-rpc = { workspace = true }
scion-proto = { workspace = true }
endhost-api = { workspace = true }
endhost-api-models = { workspace = true }
endhost-api-protobuf = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
