[package]
name = "endhost-api-client"
version = "0.2.0"
edition.workspace = true
authors = ["Anapaya & contributors"]
license = "Apache-2.0"
description = "SCION endhost API client"
repository = "https://github.com/anapaya/scion-sdk"
keywords = ["SCION", "networking"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
endhost-api = { workspace = true }
endhost-api-models = { workspace = true }
endhost-api-protobuf = { workspace = true }
reqwest = { workspace = true }
scion-proto = { workspace = true }
scion-sdk-reqwest-connect-rpc = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
