[package]
name = "endhost-api-models"
version = "0.2.0"
edition.workspace = true
authors = ["Anapaya & contributors"]
license = "Apache-2.0"
description = "Connect RPC client library for reqwest based clients"
repository = "https://github.com/anapaya/scion-sdk"
keywords = ["SCION", "networking"]

[dependencies]
# Local Dependencies
scion-proto = { workspace = true }

# Global Dependencies
async-trait = { workspace = true }
serde = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
