[package]
name = "endhost-api-protobuf"
version = "0.1.0"
edition.workspace = true

[dependencies]
# Local Dependencies
endhost-api-models = { workspace = true }
scion-protobuf = { workspace = true }
scion-proto = { workspace = true }

# Global Dependencies
prost = { workspace = true }
url = { workspace = true }

[lints]
workspace = true

[build-dependencies]
prost-build = { workspace = true, features = ["cleanup-markdown"] }
