[package]
name = "endhost-api-protobuf"
version = "0.2.0"
edition.workspace = true
authors = ["Anapaya & contributors"]
license = "Apache-2.0"
description = "Protobuf definitions for the SCION endhost API"
repository = "https://github.com/anapaya/scion-sdk"
keywords = ["SCION", "networking"]

[dependencies]
# Local Dependencies
endhost-api-models = { workspace = true }
scion-protobuf = { workspace = true }
scion-proto = { workspace = true }

# Global Dependencies
prost = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
