[package]
name = "endhost-api"
version = "0.1.0"
edition.workspace = true

[dependencies]
# Local Dependencies
endhost-api-models = { workspace = true }
endhost-api-protobuf = { workspace = true }
scion-proto = { workspace = true }
scion-sdk-axum-connect-rpc = { workspace = true }

# Global Dependencies
axum = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true } # only used in doc-tests
tokio = { workspace = true } # only used in doc-tests

[package.metadata.cargo-shear]
ignored = ["tokio", "async-trait"]

[lints]
workspace = true
