[package]
name = "endhost-api"
version = "0.2.0"
edition.workspace = true
authors = ["Anapaya & contributors"]
license = "Apache-2.0"
description = "SCION endhost API"
repository = "https://github.com/anapaya/scion-sdk"
keywords = ["SCION", "networking"]

[dependencies]
# Local Dependencies
endhost-api-models = { workspace = true }
endhost-api-protobuf = { workspace = true }
scion-proto = { workspace = true }
scion-sdk-axum-connect-rpc = { workspace = true }

# Global Dependencies
axum = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true } # only used in doc-tests
tokio = { workspace = true } # only used in doc-tests

[package.metadata.cargo-shear]
ignored = ["tokio", "async-trait"]

[lints]
workspace = true
