[package]
name = "address-manager"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rangeset = { workspace = true }
serde = { workspace = true }
utoipa = { workspace = true }
thiserror = { workspace = true }
scion-proto = { workspace = true }
ipnet = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }

[lints]
workspace = true
