[package]
name = "scion-sdk-address-manager"
version = "0.2.0"
edition.workspace = true
authors = ["Anapaya & contributors"]
license = "Apache-2.0"
description = "Address manager to allocate and manage SCION endhost addresses"
repository = "https://github.com/anapaya/scion-sdk"
keywords = ["SCION", "networking"]

[dependencies]
anyhow = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
utoipa = { workspace = true }
thiserror = { workspace = true }
scion-proto = { workspace = true }
scion-sdk-utils = { workspace = true }
ipnet = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }

[lints]
workspace = true
