[package]
name = "axum-connect-rpc"
version = "0.1.0"
edition.workspace = true

[dependencies]
axum = { workspace = true }
bytes = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }

[lints]
workspace = true
