[package]
name = "common-types"
version = "0.1.0"
edition.workspace = true

[dependencies]
ed25519-dalek = { workspace = true, features = ["pem", "pkcs8"] }
jsonwebtoken = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[lints]
workspace = true
