[package]
name = "scion-sdk-reqwest-connect-rpc"
version = "0.1.0"
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
