[package]
name = "scion-sdk-reqwest-connect-rpc"
version = "0.2.0"
edition.workspace = true
authors = ["Anapaya & contributors"]
license = "Apache-2.0"
description = "Connect RPC client library for reqwest based clients"
repository = "https://github.com/anapaya/scion-sdk"
keywords = ["SCION", "networking"]

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[lints]
workspace = true
