[package]
name = "scion-sdk-token-validator"
version = "0.2.0"
edition.workspace = true
authors = ["Anapaya & contributors"]
license = "Apache-2.0"
description = "SCION endhost SDK generic JWT validator"
repository = "https://github.com/anapaya/scion-sdk"
keywords = ["SCION", "networking"]

[dependencies]
ed25519-dalek = { workspace = true }
jsonwebtoken = { workspace = true }
pem = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
