[package]
name = "scion-sdk-trc"
version = "0.2.0"
edition.workspace = true
authors = ["Anapaya & contributors"]
license = "Apache-2.0"
description = "SCION TRC manipulation library"
repository = "https://github.com/anapaya/scion-sdk"
keywords = ["SCION", "networking"]

[dependencies]
cms = { workspace = true }
der = { workspace = true, features = ["pem", "derive"] }
scion-proto = { workspace = true }
thiserror = { workspace = true }
x509-cert = { workspace = true }

[dev-dependencies]

[lints]
workspace = true
