[package]
name = "scion-sdk-utils"
version = "0.1.0"
edition.workspace = true

[dependencies]
ed25519-dalek = { workspace = true }
num-traits = { workspace = true }
pem = { workspace = true }
quinn = { workspace = true }
rcgen = { workspace = true}
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }


[dev-dependencies]
rand = { workspace = true }
rand_chacha = { workspace = true }

[lints]
workspace = true
