[package]
name = "scion-sdk-utils"
version = "0.2.0"
edition.workspace = true
authors = ["Anapaya & contributors"]
license = "Apache-2.0"
description = "SCION endhost SDK utilities"
repository = "https://github.com/anapaya/scion-sdk"
keywords = ["SCION", "networking"]

[dependencies]
ed25519-dalek = { workspace = true }
num-traits = { workspace = true }
pem = { workspace = true }
quinn = { workspace = true }
rcgen = { workspace = true}
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }


[dev-dependencies]
rand = { workspace = true }
rand_chacha = { workspace = true }

[lints]
workspace = true
