
[package]
name = "scion-proto"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
publish = false

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
prost = { workspace = true }
rand = { workspace = true }
scion-protobuf = { workspace = true }
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
prost-types = { workspace = true }
rand_xorshift = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
tokio = { version = "1.45.1", features = [
    "test-util",
    "tokio-macros",
    "macros",
] }

[[bench]]
name = "checksum"
harness = false

[lints]
workspace = true
