
[package]
name = "scion-proto"
version = "0.2.0"
edition.workspace = true
authors = ["Anapaya & contributors"]
license = "Apache-2.0"
description = "SCION protocol data structures and serialization"
repository = "https://github.com/anapaya/scion-sdk"
keywords = ["SCION", "networking"]
categories = ["network-programming"]

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
prost = { workspace = true }
rand = { workspace = true }
scion-protobuf = { workspace = true }
serde = { workspace = true }
serde_yaml_ng = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
prost-types = { workspace = true }
rand_xorshift = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
tokio = { version = "1.45.1", features = [
    "test-util",
    "tokio-macros",
    "macros",
] }

[[bench]]
name = "checksum"
harness = false

[lints]
workspace = true
