[package]
name = "scion-protobuf"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
publish = false

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[lib]
bench = false

[lints]
workspace = true

[package.metadata.cargo-shear]
ignored = ["prost-types"]
