[package]
name = "scion-protobuf"
version = "0.2.0"
edition.workspace = true
authors = ["Anapaya & contributors"]
license = "Apache-2.0"
description = "Protobuf definitions used in the SCION control plane"
repository = "https://github.com/anapaya/scion-sdk"
keywords = ["SCION", "networking"]
categories = ["network-programming"]

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }


[lib]
bench = false

[lints]
workspace = true

[package.metadata.cargo-shear]
ignored = ["prost-types"]
