[package]
name = "snap-control"
version = "0.1.0"
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
axum-macros = { workspace = true }
http = { workspace = true }
jsonwebtoken = { workspace = true }
mockall = { workspace = true }
prometheus = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true, features = ["limit", "buffer"] }
tracing = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true, features = ["yaml", "time"] }

# Local dependencies
endhost-api = { workspace = true }
endhost-api-client = { workspace = true }
endhost-api-models = { workspace = true }
scion-proto = { workspace = true }
scion-sdk-axum-connect-rpc = { workspace = true }
scion-sdk-observability = { workspace = true }
scion-sdk-reqwest-connect-rpc = { workspace = true }
scion-sdk-token-validator = { workspace = true }
snap-dataplane = { workspace = true }
snap-tokens = { workspace = true }

[lints]
workspace = true

[build-dependencies]
prost-build = { workspace = true, features = ["cleanup-markdown"] }
