[package]
name = "snap-tokens"
version = "0.1.0"
edition.workspace = true

[dependencies]
jsonwebtoken = { workspace = true }
pem = { workspace = true }
serde = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
scion-sdk-token-validator = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4", "v5"] }

[lints]
workspace = true
