[package]
name = "snap-tokens"
version = "0.2.0"
edition.workspace = true
authors = ["Anapaya & contributors"]
license = "Apache-2.0"
description = "AuthN/AuthZ tokens used in the SNAP transport underlay for SCION"
repository = "https://github.com/anapaya/scion-sdk"
keywords = ["SCION", "networking"]
categories = ["network-programming"]

[dependencies]
jsonwebtoken = { workspace = true }
pem = { workspace = true }
serde = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
scion-sdk-token-validator = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4", "v5"] }

[lints]
workspace = true
