[package]
name = "snap-tun"
version = "0.1.0"
edition.workspace = true

[dependencies]
assert_matches = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
httparse = { workspace = true }
ipnet = { workspace = true }
observability = { workspace = true }
prometheus = { workspace = true }
prost = { workspace = true }
quinn = { workspace = true }
scion-proto = { workspace = true }
serde = { workspace = true }
snap-tokens = { workspace = true }
thiserror = { workspace = true }
token-validator = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
test-log = { workspace = true, features = ["trace"] }
test-util = { workspace = true }

[lints]
workspace = true
