[package]
name = "snap-tun"
version = "0.1.0"
edition.workspace = true

[dependencies]
assert_matches = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
httparse = { workspace = true }
ipnet = { workspace = true }
prometheus = { workspace = true }
prost = { workspace = true }
quinn = { workspace = true }
scion-proto = { workspace = true }
scion-sdk-observability = { workspace = true }
scion-sdk-token-validator = { workspace = true }
scion-sdk-utils = { workspace = true }
serde = { workspace = true }
snap-tokens = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
test-log = { workspace = true, features = ["trace"] }

[lints]
workspace = true
