[package]
name = "snap-tun"
version = "0.2.0"
edition.workspace = true
authors = ["Anapaya & contributors"]
license = "Apache-2.0"
description = "The snap-tun implementation for the SNAP transport underlay for SCION"
repository = "https://github.com/anapaya/scion-sdk"
keywords = ["SCION", "networking"]
categories = ["network-programming"]

[dependencies]
assert_matches = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
http = { workspace = true }
httparse = { workspace = true }
ipnet = { workspace = true }
prometheus = { workspace = true }
prost = { workspace = true }
quinn = { workspace = true }
scion-proto = { workspace = true }
scion-sdk-observability = { workspace = true }
scion-sdk-token-validator = { workspace = true }
scion-sdk-utils = { workspace = true }
serde = { workspace = true }
snap-tokens = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
test-log = { workspace = true, features = ["trace"] }

[lints]
workspace = true
